--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "dotenv": "^8.2.0",
+    "formik": "^2.1.5",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -26,7 +27,9 @@
     "react-vis": "^1.11.7",
     "react-window-size": "^1.2.2",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "validator": "^13.1.1",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,6 +53,8 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^7.8.1",
+    "prettier": "^2.1.1",
     "redux-immutable-state-invariant": "^2.1.0"
   }
 }
