--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.5.2",
     "dotenv": "^8.2.0",
     "formik": "^2.1.5",
+    "glamor": "^2.20.40",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -24,6 +25,7 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.2",
+    "react-toastify": "^6.0.9",
     "react-vis": "^1.11.7",
     "react-window-size": "^1.2.2",
     "redux": "^4.0.5",
